config/600-envoyconfig.yaml
apiVersion: networking.istio.io/v1alpha3
kind: EnvoyFilter
metadata:
  name: kzscaler-filter
spec:
  configPatches:
    - applyTo: HTTP_FILTER
      match:
        context: SIDECAR_OUTBOUND
        listener:
          filterChain:
            filter:
              name: envoy.filters.network.http_connection_manager
              subFilter:
                name: envoy.filters.http.router
      patch:
        operation: INSERT_BEFORE
        value:
          name: kzscaler-filter-config
          config_discovery:
            config_source:
              ads: { }
              initial_fetch_timeout: 0s
            type_urls: [ "type.googleapis.com/envoy.extensions.filters.http.wasm.v3.Wasm" ]
---
apiVersion: networking.istio.io/v1alpha3
kind: EnvoyFilter
metadata:
  name: kzscaler-filter-config
spec:
  configPatches:
    - applyTo: EXTENSION_CONFIG
      match:
        context: SIDECAR_OUTBOUND
      patch:
        operation: ADD
        value:
          name: kzscaler-filter-config
          typed_config:
            '@type': type.googleapis.com/udpa.type.v1.TypedStruct
            type_url: type.googleapis.com/envoy.extensions.filters.http.wasm.v3.Wasm
            value:
              config:
                vm_config:
                  code:
                    remote:
                      http_uri:
                        uri: https://pubic-1259210478.cos.ap-nanjing.myqcloud.com/proxy-1645541327.wasm
                  runtime: envoy.wasm.runtime.v8
                configuration:
                  "@type": type.googleapis.com/google.protobuf.StringValue
                  value: "outbound|80||kzscaler.kzscaler.svc.cluster.local&"
